[gd_scene load_steps=12 format=3 uid="uid://vbkwmrkhu0ay"]

[ext_resource type="Texture2D" uid="uid://c24nsgb1lbash" path="res://assets/bg/nature_3/origbig.png" id="1_bqqt6"]
[ext_resource type="Script" uid="uid://gx0r37kt6sny" path="res://scenes/main_menu.gd" id="1_wu84c"]
[ext_resource type="Texture2D" uid="uid://bd3svo1y2fck6" path="res://assets/bg/nature_5/1.png" id="2_5dd4i"]
[ext_resource type="FontFile" uid="uid://bn5vjuq7ksl3u" path="res://assets/fonts/BoldPixels.otf" id="2_wu84c"]
[ext_resource type="Script" uid="uid://cua5ertgua8n3" path="res://scripts/CloudLayer.gd" id="3_lgwnu"]
[ext_resource type="Texture2D" uid="uid://b0r2jn67umucp" path="res://assets/bg/nature_5/2.png" id="4_flqon"]
[ext_resource type="Texture2D" uid="uid://ccm3h8doqmd0n" path="res://assets/fonts/AetherTitle.png" id="5_8ln24"]
[ext_resource type="Texture2D" uid="uid://66dccex6b6gr" path="res://assets/bg/nature_5/3.png" id="5_rcqid"]
[ext_resource type="Texture2D" uid="uid://gykrls287i48" path="res://assets/bg/nature_5/4.png" id="6_1ajci"]
[ext_resource type="Texture2D" uid="uid://dhep2v6ehgqbc" path="res://assets/HUD/buttons/buttonNormal.png" id="9_flqon"]
[ext_resource type="Texture2D" uid="uid://b4lbf7el4mkfg" path="res://assets/HUD/buttons/buttonHover.png" id="10_rcqid"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wu84c")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(638, 361.00003)
scale = Vector2(2.5, 2.5)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(0, -0.3999939)
texture = ExtResource("2_5dd4i")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, 388)
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(1440, 0)
script = ExtResource("3_lgwnu")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(641.99994, -24.000015)
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_flqon")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(638, 361.00003)
scale = Vector2(2.5, 2.5)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(0, -0.3999939)
texture = ExtResource("5_rcqid")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(638, 361.00003)
scale = Vector2(2.5, 2.5)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(0, -0.3999939)
texture = ExtResource("6_1ajci")

[node name="BG" type="Sprite2D" parent="."]
visible = false
position = Vector2(646.5, 359)
scale = Vector2(0.5846354, 0.6033951)
texture = ExtResource("1_bqqt6")

[node name="gameVer" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 651.0
offset_right = 105.0
offset_bottom = 702.0
theme_override_fonts/font = ExtResource("2_wu84c")
theme_override_font_sizes/font_size = 50
text = "v0.1"

[node name="PLAY" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 469.99997
offset_top = 241.0
offset_right = 518.0
offset_bottom = 258.0
scale = Vector2(7, 7)
texture_normal = ExtResource("9_flqon")
texture_pressed = ExtResource("10_rcqid")
texture_hover = ExtResource("10_rcqid")
stretch_mode = 3

[node name="playText" type="Label" parent="PLAY"]
layout_mode = 0
offset_left = 2.586914
offset_top = 2.586914
offset_right = 330.9569
offset_bottom = 80.586914
scale = Vector2(0.13, 0.13)
theme_override_fonts/font = ExtResource("2_wu84c")
theme_override_font_sizes/font_size = 75
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ABOUT" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 469.99997
offset_top = 373.0
offset_right = 518.0
offset_bottom = 390.0
scale = Vector2(7, 7)
texture_normal = ExtResource("9_flqon")
texture_pressed = ExtResource("10_rcqid")
texture_hover = ExtResource("10_rcqid")
stretch_mode = 3

[node name="aboutText" type="Label" parent="ABOUT"]
layout_mode = 0
offset_left = 2.586914
offset_top = 2.586914
offset_right = 330.9569
offset_bottom = 80.586914
scale = Vector2(0.13, 0.13)
theme_override_fonts/font = ExtResource("2_wu84c")
theme_override_font_sizes/font_size = 75
text = "About"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QUIT" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 469.99997
offset_top = 504.00003
offset_right = 518.0
offset_bottom = 521.0
scale = Vector2(7, 7)
texture_normal = ExtResource("9_flqon")
texture_pressed = ExtResource("10_rcqid")
texture_hover = ExtResource("10_rcqid")
stretch_mode = 3

[node name="quitText" type="Label" parent="QUIT"]
layout_mode = 0
offset_left = 2.586914
offset_top = 2.586914
offset_right = 330.9569
offset_bottom = 80.586914
scale = Vector2(0.13, 0.13)
theme_override_fonts/font = ExtResource("2_wu84c")
theme_override_font_sizes/font_size = 75
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AetherTitle" type="Sprite2D" parent="."]
position = Vector2(644, 143)
scale = Vector2(0.535, 0.535)
texture = ExtResource("5_8ln24")

[connection signal="pressed" from="PLAY" to="." method="_on_play_pressed"]
[connection signal="pressed" from="QUIT" to="." method="_on_quit_pressed"]
